# teamautobot

./: .env-sample  .gitignore  AGENTS.md  README.md  pyproject.toml  stages.yaml  teambot.json
.agent-tracking/: openai-harness-engineering-reference.txt  review.md
.agent/commands/sdd/: README.md  sdd.1-create-feature-spec.prompt.md  sdd.2-review-spec.prompt.md  sdd.3-research-feature.prompt.md  sdd.4-task-planner-for-feature.prompt.md  sdd.5-review-plan.prompt.md  sdd.6-task-implementer-for-feature.prompt.md  sdd.6b-implementation-review.prompt.md  sdd.7-post-implementation-review.prompt.md
.agent/standards/: decision-record-standards.md  task-planning-template.md
.devcontainer/: devcontainer.json  post-script.sh
.github/agents/: ba.agent.md  builder-1.agent.md  builder-2.agent.md  pm.agent.md  reviewer.agent.md
.teambot/: model_cache.json
docs/: sdd-objective-template.md  teamautobot-design.md
docs/decision-records/: 2026-03-12-custom-agent-runtime.md  2026-03-12-llm-interface-strategy.md
docs/plans/: 2026-03-12-d2-llm-interface-decision-plan.md  2026-03-13-first-planner-task-graph-slice.md  2026-03-14-builder-reviewer-review-gate-slice.md
src/: app.py  load_env.py
src/teamautobot/: __init__.py  agents.py  artifacts.py  cli.py  demo.py  environment.py  events.py  tools.py
src/teamautobot/llm/: __init__.py  azure_openai.py  fake.py  types.py
src/teamautobot/planner/: __init__.py  demo.py  interfaces.py  models.py  review.py  runtime.py  static_planner.py  validation.py
tests/: test_azure_openai.py  test_cli.py  test_planner.py
